<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/location_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/your_location"
        android:textColor="#E1EFB2"
        android:textSize="46sp"
        android:typeface="serif" />

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/gps_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_selector"
            android:onClick="onClick"
            android:text="@string/use_gps"
            android:textColor="#ADCF44"
            android:textSize="22sp" />

        <Button
            android:id="@+id/select_from_map_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_selector"
            android:onClick="onClick"
            android:text="@string/select_from_map"
            android:textColor="#ADCF44"
            android:textSize="22sp" />
    </LinearLayout>

</RelativeLayout>