<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res/com.asif.sendmylocation"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.asif.sendmylocation.SendActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="send!"
            android:textColor="#E1EFB2"
            android:textSize="46sp"
            android:typeface="serif" />

        <LinearLayout
            android:id="@+id/contactLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:gravity="center" >

                    <EditText
                        android:id="@+id/mobile_number"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:inputType="phone"
                        android:onClick="numberEditTextOnClick"
                        android:text="@string/edit_text_enter_number"
                        android:textColor="@color/black_description"
                        android:textCursorDrawable="@null"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/button_phonebook"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:layout_alignBottom="@+id/mobile_number"
                        android:layout_alignRight="@+id/mobile_number"
                        android:layout_alignTop="@+id/mobile_number"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/contact_button_selector"
                        android:contentDescription="@string/phonebook"
                        android:onClick="chooseFriend"
                        android:padding="5dp" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/contactNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="name-number"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sendButtonLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/smsStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="30dp"
                android:text="Error"
                android:textColor="@color/red"
                android:visibility="gone" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_selector"
                android:onClick="sendDirectionViaSMS"
                android:text="@string/send_button_text"
                android:textColor="#ADCF44"
                android:textSize="22sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>