<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res/com.asif.sendmylocation"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.asif.sendmylocation.SendActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Send directions to you!"
            android:textColor="#5C6BC0"
            android:textSize="28dp" />

        <LinearLayout
            android:id="@+id/contactLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:gravity="center" >

                    <EditText
                        android:id="@+id/mobile_number"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:inputType="phone"
                        android:onClick="numberEditTextOnClick"
                        android:text="@string/edit_text_enter_number"
                        android:textColor="@color/edit_text_blue"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/button_phonebook"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:layout_alignBottom="@+id/mobile_number"
                        android:layout_alignRight="@+id/mobile_number"
                        android:layout_alignTop="@+id/mobile_number"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/contact_button_selector"
                        android:contentDescription="@string/phonebook"
                        android:onClick="chooseFriend"
                        android:padding="5dp" />
                </RelativeLayout>

                <ImageButton
                    android:id="@+id/ok_button"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ok_button"
                    android:contentDescription="@string/phonebook"
                    android:onClick="chooseFriend"
                    android:padding="5dp"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/contactNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="name-number"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/waitingLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <com.asif.sendmylocation.ProgressWheel
                android:id="@+id/progress_wheel"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center_horizontal"
                wheel:matProg_barColor="#5588FF"
                wheel:matProg_progressIndeterminate="true" />

            <TextView
                android:id="@+id/waitingText"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:text="Waiting for your current location..." />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sendButtonLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/smsStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="30dp"
                android:text="Error"
                android:textColor="@color/red"
                android:visibility="gone" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#81C784"
                android:onClick="sendDirectionViaSMS"
                android:text="@string/send_button_text"
                android:textColor="@android:color/white"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>